tooltip-plus, switch-plus

--- a/src/material-design-lite.scss
+++ b/src/material-design-lite.scss
@@ -41,14 +41,17 @@
 @import "list/list";
 @import "menu/menu";
 @import "progress/progress";
-@import "layout/layout";
+//@import "layout/layout";
+@import "./layout";
 @import "radio/radio";
 @import "slider/slider";
 @import "snackbar/snackbar";
 @import "spinner/spinner";
 @import "switch/switch";
+@import "switch-plus/switch";
 @import "tabs/tabs";
 @import "textfield/textfield";
 @import "tooltip/tooltip";
+@import "tooltip-plus/tooltip";
 @import "shadow/shadow";
 @import "grid/grid";
